# slangmod

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  monitor.gp  pyproject.toml  test.py
.github/workflows/: lint-test.yml  publish-docker.yml  publish-documentation.yml  publish-package.yml
docs/source/: clean.rst  conf.py  configuration.rst  data.rst  index.rst  installation.rst  io.rst  ml.rst  start.rst
slangmod/: __init__.py
slangmod/config/: __init__.py  enums.py
slangmod/etl/: __init__.py  cleaner.py  duplicates.py  encoding.py  exceptions.py  folder.py  frame.py  memory.py  regex.py  shuffle.py  splitter.py  terminator.py
slangmod/gnuplot/: compare.gp  monitor.gp
slangmod/io/: __init__.py  books.py  chat.py  config.py  corpus.py  files.py  misc.py  model.py  summary.py  tokenizer.py
slangmod/ml/: __init__.py  data.py  delayed.py  encoder.py  evaluator.py  folder.py  model.py  splitter.py  trainer.py  types.py  validator.py
slangmod/steps/: __init__.py  chat.py  clean.py  compare.py  dry_run.py  encode.py  log_messages.py  monitor.py  summarize.py  tokenize.py  train.py
tests/: test_read_system_prompt.py
tests/etl/: test_cleaner.py  test_encoding.py  test_frame.py  test_memory.py  test_regex.py  test_shuffle.py  test_test_folder.py  test_train_folder.py
tests/io_/: test_corpus_discovery.py  test_corpus_filter.py  test_corpus_loader.py  test_directory_cleaner.py  test_extract_file_name.py  test_file_type_extractor.py  test_tokenizer_loader.py  test_tokenizer_saver.py  test_toml_printer.py
tests/ml/: test_delayed.py  test_evaluator.py  test_test_data.py  test_test_folder.py  test_train_data.py  test_train_folder.py
(+102 files in other folders)
